# compscat

./: .flake8  .gitignore  .gitignore.swp  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  _config.yml  codespell.txt  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pre-commit.yml  publish.yml  test.yaml
analysis/: analysis_compare.cc  analysis_compton.cc  bash_run.sh
analysis/madgraph-config/: compton-madgraph-diff-energies.txt  compton-madgraph.txt
compscat/: save_events.py
notebooks/: cross-section.ipynb  test-compscat.ipynb
src/: MC_compton.root
src/compscat/: MC_compton.root  __init__.py  __main__.py  constants.py  cross_section.py  dsigma.py  generate_event.py  plotting.py  save_events.py
src/compscat/util/: log.py  test_log.py
tests/: test_xsec.py
