[metadata]
name = compscat
description = Monte Carlo Simulation of Compton Scattering
url = https://github.com/amanmdesai/compscat
version = file: src/compscat/version.txt
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
python_requires = >=3.7
project_urls =
    Bug Tracker =   https://github.com/amanmdesai/compscat/issues
    Documentation = https://compscat.readthedocs.io/
    Source Code =   https://github.com/amanmdesai/compscat
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
author = Aman Desai
author_email = amanmukeshdesai@gmail.com
maintainer = Aman Desai
maintainer_email = amanmukeshdesai@gmail.com

[options]
package_dir=
    =src
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    uproot>=4.2.4
    numpy>=1.22.4
    matplotlib>=3.5.0

[options.extras_require]
testing = pytest; pytest-coverage

[options.packages.find]
where=src

# [tool:pytest]
# addopts = --cov=compscat --cov-config=.coveragerc
