[metadata]
name = compscat
description = Monte Carlo Simulation of Compton Scattering
url = https://github.com/amanmdesai/compscat
version = file: src/compscat/VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
python_requires = >=3.8
project_urls =
    Bug Tracker =   https://github.com/amanmdesai/compscat/issues
    Source Code =   https://github.com/amanmdesai/compscat
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
author = Aman Desai
author_email = amanmukeshdesai@gmail.com
maintainer = Aman Desai
maintainer_email = amanmukeshdesai@gmail.com

[options]
package_dir=
    =src
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    uproot>=4.2.4
    numpy>=1.22.4
    matplotlib>=3.5.0
    pandas>=1.4.2
[options.extras_require]
testing = pytest

[options.packages.find]
where=src

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503
per-file-ignores =
    */__init__.py: F401
    setup.py: F401

exclude =
    .git,
    __pycache__,
    notebooks,
    tests
